DDCE-5868: Upgrade bootstrap libraries

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,7 +20,7 @@ include "backend.conf"
 appName = trusts-individual-check-stub
 
 # Default http client
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # The application languages
 # ~~~~~
